--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,9 +10,92 @@
 
 body{
     font-family: "PT Sans Caption", sans-serif;
+    background-color: #f7ecde;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+}
+
+h1{
+    font-size: 50px;
+    font-family: "Pacifico", cursive;
+    color: #352e28;
+}
+
+h1::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 25%;
+    left: 0;
+    bottom: 10px;
+    background-color: #fec260;
+    transition: height 350ms;
+    z-index: -1;
+}
+
+h1:hover::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 50%;
+    left: 0;
+    bottom: 10px;
+    background-color: #fec260;
+    transition: height 350ms;
+    z-index: -1;
 }
 
 .form{
-    border-top: dotted 1px black;
-    border-bottom: dotted 1px black;
+    border-top: dotted 2px #352e28;
+    border-bottom: dotted 2px #352e28;
+}
+
+h2{
+    font-family: "Righteous", cursive;
+    font-size: 25px;
+    color: transparent;
+    background-clip: text;
+    background-image: linear-gradient(to right, #3ca55c, #b5ac49);
+    font-weight: 500;
+}
+
+.btn-submit {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #d1512d;
+    --bs-btn-border-color: #d1512d;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #bb4120;
+    --bs-btn-hover-border-color: #a03315;
+}
+
+table{
+    vertical-align: middle;
+    border-color: inherit;
+    border-style: solid;
+    border-width: 0;
+    width: 100%;
+}
+
+td, th{
+    padding: .5rem .5rem;
+}
+
+.btn-visit {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #9eb23b;
+    --bs-btn-border-color: #9eb23b;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #8a9e23;
+    --bs-btn-hover-border-color: #6e8018;
+}
+
+.btn-delete {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #eb1d36;
+    --bs-btn-border-color: #eb1d36;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #d30820;
+    --bs-btn-hover-border-color: #ba081d;
 }
