--- a/style/style.css
+++ b/style/style.css
@@ -107,3 +107,8 @@ td, th{
     --bs-btn-hover-bg: #d30820;
     --bs-btn-hover-border-color: #ba081d;
 }
+
+.form-control:focus {
+    border-color: #fd7e14;
+    box-shadow: 0 0 0 .25rem rgba(254, 194, 96, .25);
+}
